# coralmicro-transfer-learning

./: .gitignore  .gitmodules  LICENSE  README.md
acquire_dataset/: CMakeLists.txt  main.cc
scripts/: aug_imgs.py  dataset_prep.ipynb  dataset_prep.py  kaggle_dataset_prep.py  merge_dataset.py  prepare_dataset.ipynb
